feat(evpn,l3vpn): Implement OSPF as basic CE-to-PE protocol

--- a/config-builder/documentation/devices/s1-pe01.md
+++ b/config-builder/documentation/devices/s1-pe01.md
@@ -739,6 +739,12 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 
 #### Route-maps Summary
 
+##### RM-BGP-TO-OSPF
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | ip address prefix-list PL-ATM-FAKE-PREFIX | tag 1205 | - | - |
+
 ##### RM-MANAGE-WITH-COMMUNITIES
 
 | Sequence | Type | Match | Set | Sub-Route-Map | Continue |
@@ -749,6 +755,11 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 #### Route-maps Device Configuration
 
 ```eos
+!
+route-map RM-BGP-TO-OSPF permit 10
+   description Redistribute BGP to OSPF
+   match ip address prefix-list PL-ATM-FAKE-PREFIX
+   set tag 1205
 !
 route-map RM-MANAGE-WITH-COMMUNITIES permit 10
    description Configure LP to 90 for ATM
