--- a/config-builder/documentation/devices/s1-pe03.md
+++ b/config-builder/documentation/devices/s1-pe03.md
@@ -35,6 +35,7 @@
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
+  - [Router OSPF](#router-ospf)
   - [Router ISIS](#router-isis)
   - [Router BGP](#router-bgp)
 - [BFD](#bfd)
@@ -580,6 +581,30 @@ no ip routing vrf MGMT
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 ```
 
+### Router OSPF
+
+#### Router OSPF Summary
+
+| Process ID | Router ID | Default Passive Interface | No Passive Interface | BFD | Max LSA | Default Information Originate | Log Adjacency Changes Detail | Auto Cost Reference Bandwidth | Maximum Paths | MPLS LDP Sync Default | Distribute List In |
+| ---------- | --------- | ------------------------- | -------------------- | --- | ------- | ----------------------------- | ---------------------------- | ----------------------------- | ------------- | --------------------- | ------------------ |
+| 1205 | 10.255.1.3 | enabled | | disabled | default | disabled | disabled | - | - | - | - |
+
+#### Router OSPF Router Redistribution
+
+| Process ID | Source Protocol | Include Leaked | Route Map |
+| ---------- | --------------- | -------------- | --------- |
+| 1205 | bgp | disabled | RM-BGP-TO-OSPF |
+
+#### Router OSPF Device Configuration
+
+```eos
+!
+router ospf 1205 vrf ATM
+   router-id 10.255.1.3
+   passive-interface default
+   redistribute bgp route-map RM-BGP-TO-OSPF
+```
+
 ### Router ISIS
 
 #### Router ISIS Summary
@@ -715,7 +740,7 @@ ASN Notation: asdot
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
-| ATM | 10.255.1.3:12 | connected |
+| ATM | 10.255.1.3:12 | connected<br>ospf |
 | ETHERNET_VPN | 10.255.1.3:11 | connected |
 
 #### Router BGP Device Configuration
@@ -765,6 +790,7 @@ router bgp 65000
       neighbor 10.2.0.1 remote-as 65101
       neighbor 10.2.0.1 description ATM CONNECTITVITY S1-CE03
       redistribute connected
+      redistribute ospf
       !
       address-family ipv4
          neighbor 10.2.0.1 activate
@@ -879,6 +905,12 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 
 #### Route-maps Summary
 
+##### RM-BGP-TO-OSPF
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | ip address prefix-list PL-ATM-FAKE-PREFIX | tag 1205 | - | - |
+
 ##### RM-MANAGE-WITH-COMMUNITIES
 
 | Sequence | Type | Match | Set | Sub-Route-Map | Continue |
@@ -889,6 +921,11 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 #### Route-maps Device Configuration
 
 ```eos
+!
+route-map RM-BGP-TO-OSPF permit 10
+   description Redistribute BGP to OSPF
+   match ip address prefix-list PL-ATM-FAKE-PREFIX
+   set tag 1205
 !
 route-map RM-MANAGE-WITH-COMMUNITIES permit 10
    description Configure LP to 90 for ATM
