--- a/config-builder/documentation/devices/s2-ce01.md
+++ b/config-builder/documentation/devices/s2-ce01.md
@@ -24,7 +24,7 @@
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
-  - [Router BGP](#router-bgp)
+  - [Router OSPF](#router-ospf)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -319,6 +319,8 @@ interface Vlan1205
    no shutdown
    vrf ATM
    ip address 10.2.1.21/24
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 ```
 
 ## Routing
@@ -382,52 +384,28 @@ ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.5.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 ```
 
-### Router BGP
+### Router OSPF
 
-ASN Notation: asplain
+#### Router OSPF Summary
 
-#### Router BGP Summary
+| Process ID | Router ID | Default Passive Interface | No Passive Interface | BFD | Max LSA | Default Information Originate | Log Adjacency Changes Detail | Auto Cost Reference Bandwidth | Maximum Paths | MPLS LDP Sync Default | Distribute List In |
+| ---------- | --------- | ------------------------- | -------------------- | --- | ------- | ----------------------------- | ---------------------------- | ----------------------------- | ------------- | --------------------- | ------------------ |
+| 1205 | - | disabled | Vlan1205 <br> | disabled | default | disabled | disabled | - | - | - | - |
 
-| BGP AS | Router ID |
-| ------ | --------- |
-| 65102 | - |
+#### OSPF Interfaces
 
-#### Router BGP Peer Groups
+| Interface | Area | Cost | Point To Point |
+| -------- | -------- | -------- | -------- |
+| Vlan1205 | 0.0.0.0 | - | True |
 
-##### MPLS-BACKBONE
-
-| Settings | Value |
-| -------- | ----- |
-| Remote AS | 65000 |
-
-#### BGP Neighbors
-
-| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
-| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
-| 10.2.1.1 | Inherited from peer group MPLS-BACKBONE | ATM | - | - | - | - | - | - | - | - | - |
-
-#### Router BGP VRFs
-
-| VRF | Route-Distinguisher | Redistribute |
-| --- | ------------------- | ------------ |
-| ATM | - | connected |
-
-#### Router BGP Device Configuration
+#### Router OSPF Device Configuration
 
 ```eos
 !
-router bgp 65102
-   neighbor MPLS-BACKBONE peer group
-   neighbor MPLS-BACKBONE remote-as 65000
-   neighbor MPLS-BACKBONE description MPLS CONNECTITVITY
-   !
-   vrf ATM
-      neighbor 10.2.1.1 peer group MPLS-BACKBONE
-      neighbor 10.2.1.1 description MPLS CONNECTITVITY S2-PE01
-      redistribute connected
-      !
-      address-family ipv4
-         neighbor 10.2.1.1 activate
+router ospf 1205 vrf ATM
+   no passive-interface Vlan1205
+   dn-bit-ignore
+
 ```
 
 ## VRF Instances
