--- a/config-builder/documentation/devices/s2-pe01.md
+++ b/config-builder/documentation/devices/s2-pe01.md
@@ -35,6 +35,7 @@
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
+  - [Router OSPF](#router-ospf)
   - [Router ISIS](#router-isis)
   - [Router BGP](#router-bgp)
 - [BFD](#bfd)
@@ -484,7 +485,7 @@ interface Loopback1012
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
 | Vlan1115 |  ETHERNET_VPN  |  -  |  10.1.5.1/24  |  -  |  -  |  -  |
-| Vlan1205 |  ATM  |  -  |  10.2.1.1/24  |  -  |  -  |  -  |
+| Vlan1205 |  ATM  |  10.2.1.1/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
@@ -500,7 +501,9 @@ interface Vlan1205
    description L3VPN-EXIT-POINT
    no shutdown
    vrf ATM
-   ip address virtual 10.2.1.1/24
+   ip address 10.2.1.1/24
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 ```
 
 ## Routing
@@ -572,6 +575,37 @@ no ip routing vrf MGMT
 ```eos
 !
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
+```
+
+### Router OSPF
+
+#### Router OSPF Summary
+
+| Process ID | Router ID | Default Passive Interface | No Passive Interface | BFD | Max LSA | Default Information Originate | Log Adjacency Changes Detail | Auto Cost Reference Bandwidth | Maximum Paths | MPLS LDP Sync Default | Distribute List In |
+| ---------- | --------- | ------------------------- | -------------------- | --- | ------- | ----------------------------- | ---------------------------- | ----------------------------- | ------------- | --------------------- | ------------------ |
+| 1205 | 10.255.1.5 | enabled | Vlan1205 <br> | disabled | default | disabled | disabled | - | - | - | - |
+
+#### Router OSPF Router Redistribution
+
+| Process ID | Source Protocol | Include Leaked | Route Map |
+| ---------- | --------------- | -------------- | --------- |
+| 1205 | bgp | disabled | RM-BGP-TO-OSPF |
+
+#### OSPF Interfaces
+
+| Interface | Area | Cost | Point To Point |
+| -------- | -------- | -------- | -------- |
+| Vlan1205 | 0.0.0.0 | - | True |
+
+#### Router OSPF Device Configuration
+
+```eos
+!
+router ospf 1205 vrf ATM
+   router-id 10.255.1.5
+   passive-interface default
+   no passive-interface Vlan1205
+   redistribute bgp route-map RM-BGP-TO-OSPF
 ```
 
 ### Router ISIS
@@ -661,11 +695,6 @@ ASN Notation: asdot
 
 #### Router BGP Peer Groups
 
-##### ATM-BACKBONE
-
-| Settings | Value |
-| -------- | ----- |
-
 ##### MPLS-OVERLAY-PEERS
 
 | Settings | Value |
@@ -683,7 +712,6 @@ ASN Notation: asdot
 | -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
 | 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
 | 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
-| 10.2.1.21 | 65102 | ATM | - | - | - | - | - | - | - | - | - |
 
 #### Router BGP EVPN Address Family
 
@@ -710,7 +738,7 @@ ASN Notation: asdot
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
-| ATM | 10.255.1.5:12 | connected |
+| ATM | 10.255.1.5:12 | connected<br>ospf |
 | ETHERNET_VPN | 10.255.1.5:11 | connected |
 
 #### Router BGP Device Configuration
@@ -722,8 +750,6 @@ router bgp 65000
    router-id 10.255.1.5
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
-   neighbor ATM-BACKBONE peer group
-   neighbor ATM-BACKBONE description ATM CONNECTITVITY
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
@@ -753,7 +779,6 @@ router bgp 65000
       neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
-      neighbor ATM-BACKBONE activate
       no neighbor MPLS-OVERLAY-PEERS activate
    !
    vrf ATM
@@ -761,13 +786,8 @@ router bgp 65000
       route-target import evpn 12:12
       route-target export evpn 12:12
       router-id 10.255.1.5
-      neighbor 10.2.1.21 peer group ATM-BACKBONE
-      neighbor 10.2.1.21 remote-as 65102
-      neighbor 10.2.1.21 description ATM CONNECTITVITY S2-CE01
       redistribute connected
-      !
-      address-family ipv4
-         neighbor 10.2.1.21 activate
+      redistribute ospf
    !
    vrf ETHERNET_VPN
       rd 10.255.1.5:11
@@ -879,6 +899,12 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 
 #### Route-maps Summary
 
+##### RM-BGP-TO-OSPF
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | ip address prefix-list PL-ATM-FAKE-PREFIX | tag 1205 | - | - |
+
 ##### RM-MANAGE-WITH-COMMUNITIES
 
 | Sequence | Type | Match | Set | Sub-Route-Map | Continue |
@@ -889,6 +915,11 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 #### Route-maps Device Configuration
 
 ```eos
+!
+route-map RM-BGP-TO-OSPF permit 10
+   description Redistribute BGP to OSPF
+   match ip address prefix-list PL-ATM-FAKE-PREFIX
+   set tag 1205
 !
 route-map RM-MANAGE-WITH-COMMUNITIES permit 10
    description Configure LP to 90 for ATM
