feat(evpn,irb): Add EVPN IRB use-case

--- a/config-builder/documentation/devices/s1-ce03.md
+++ b/config-builder/documentation/devices/s1-ce03.md
@@ -178,8 +178,6 @@ management api http-commands
 | ---- | --------- | ---- | -------- | ----- |
 | admin | 15 | network-admin | False | - |
 | ansible | 15 | network-admin | False | - |
-| arista | 15 | network-admin | False | - |
-| tom | 15 | network-admin | False | - |
 
 #### Local Users Device Configuration
 
@@ -187,8 +185,6 @@ management api http-commands
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 <removed>
-username arista privilege 15 role network-admin secret sha512 <removed>
-username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
 ### AAA Authentication
@@ -254,14 +250,14 @@ alias summary6 show ipv6 bgp summary
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1113 | SVC01_C1_VLAN_SITE01_PE03 | - |
+| 1103 | ETHERNET-VPN-IRB-1103 | - |
 
 ### VLANs Device Configuration
 
 ```eos
 !
-vlan 1113
-   name SVC01_C1_VLAN_SITE01_PE03
+vlan 1103
+   name ETHERNET-VPN-IRB-1103
 ```
 
 ## Interfaces
@@ -274,6 +270,7 @@ vlan 1113
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet1 | to s1-pe02 ethernet4 | trunk | 1-4094 | - | - | - |
 
 *Inherited from Port-Channel Interface
 
@@ -297,6 +294,7 @@ interface Ethernet1
    description to s1-pe02 ethernet4
    switchport trunk allowed vlan 1-4094
    switchport mode trunk
+   switchport
 !
 interface Ethernet2
    no shutdown
@@ -316,22 +314,22 @@ interface Ethernet2.101
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1113 | SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
+| Vlan1103 | vrf-irb-vlan1101 | IRB | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1113 |  ETHERNET_VPN  |  10.1.3.12/24  |  -  |  -  |  -  |  -  |
+| Vlan1103 |  IRB  |  10.1.3.12/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
-interface Vlan1113
-   description SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN
+interface Vlan1103
+   description vrf-irb-vlan1101
    no shutdown
-   vrf ETHERNET_VPN
+   vrf IRB
    ip address 10.1.3.12/24
 ```
 
@@ -355,6 +353,7 @@ service routing protocols model multi-agent
 | default | True |
 | ATM | True |
 | ETHERNET_VPN | True |
+| IRB | True |
 | MGMT | True |
 
 #### IP Routing Device Configuration
@@ -364,6 +363,7 @@ service routing protocols model multi-agent
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf IRB
 ip routing vrf MGMT
 ```
 
@@ -377,6 +377,7 @@ ip routing vrf MGMT
 | ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
+| IRB | false |
 | MGMT | false |
 
 ### Static Routes
@@ -386,7 +387,7 @@ ip routing vrf MGMT
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | MGMT | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
-| ETHERNET_VPN | 0.0.0.0/0 | 10.1.3.1 | - | 1 | - | - | - |
+| IRB | 10.1.0.0/16 | 10.1.3.1 | - | 1 | - | - | - |
 | ATM | 10.2.254.0/24 | - | Null0 | 1 | - | - | - |
 
 #### Static Routes Device Configuration
@@ -394,7 +395,7 @@ ip routing vrf MGMT
 ```eos
 !
 ip route vrf ATM 10.2.254.0/24 Null0
-ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.3.1
+ip route vrf IRB 10.1.0.0/16 10.1.3.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 ```
 
@@ -497,6 +498,7 @@ route-map RM-MARK-ATM-CE03 permit 10
 | -------- | ---------- |
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
+| IRB | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
@@ -506,6 +508,8 @@ route-map RM-MARK-ATM-CE03 permit 10
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance IRB
 !
 vrf instance MGMT
 ```
