--- a/config-builder/documentation/devices/s1-pe04.md
+++ b/config-builder/documentation/devices/s1-pe04.md
@@ -22,13 +22,9 @@
 - [Internal VLAN Allocation Policy](#internal-vlan-allocation-policy)
   - [Internal VLAN Allocation Policy Summary](#internal-vlan-allocation-policy-summary)
   - [Internal VLAN Allocation Policy Device Configuration](#internal-vlan-allocation-policy-device-configuration)
-- [VLANs](#vlans)
-  - [VLANs Summary](#vlans-summary)
-  - [VLANs Device Configuration](#vlans-device-configuration)
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
   - [Loopback Interfaces](#loopback-interfaces)
-  - [VLAN Interfaces](#vlan-interfaces)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [Virtual Router MAC Address](#virtual-router-mac-address)
@@ -37,7 +33,6 @@
   - [Static Routes](#static-routes)
   - [Router OSPF](#router-ospf)
   - [Router ISIS](#router-isis)
-  - [Router BGP](#router-bgp)
 - [BFD](#bfd)
   - [Router BFD](#router-bfd)
 - [MPLS](#mpls)
@@ -228,8 +223,6 @@ management api http-commands
 | ---- | --------- | ---- | -------- | ----- |
 | admin | 15 | network-admin | False | - |
 | ansible | 15 | network-admin | False | - |
-| arista | 15 | network-admin | False | - |
-| tom | 15 | network-admin | False | - |
 
 #### Local Users Device Configuration
 
@@ -237,8 +230,6 @@ management api http-commands
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 <removed>
-username arista privilege 15 role network-admin secret sha512 <removed>
-username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
 ### Enable Password
@@ -328,22 +319,6 @@ spanning-tree mode none
 ```eos
 !
 vlan internal order ascending range 1006 1199
-```
-
-## VLANs
-
-### VLANs Summary
-
-| VLAN ID | Name | Trunk Groups |
-| ------- | ---- | ------------ |
-| 1114 | SVC01_C1_VLAN_SITE01_PE04 | - |
-
-### VLANs Device Configuration
-
-```eos
-!
-vlan 1114
-   name SVC01_C1_VLAN_SITE01_PE04
 ```
 
 ## Interfaces
@@ -443,7 +418,6 @@ interface Ethernet5.101
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
 | Loopback0 | ROUTER_ID | default | 10.255.1.4/32 |
-| Loopback1011 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | 10.1.255.4/32 |
 | Loopback1012 | SVC_ETHERNET_LOOPBACK | ATM | 10.2.255.4/32 |
 
 ##### IPv6
@@ -451,7 +425,6 @@ interface Ethernet5.101
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
 | Loopback0 | ROUTER_ID | default | - |
-| Loopback1011 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | - |
 | Loopback1012 | SVC_ETHERNET_LOOPBACK | ATM | - |
 
 ##### ISIS
@@ -472,42 +445,11 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1011
-   description SVC_ETHERNET_LOOPBACK
-   no shutdown
-   vrf ETHERNET_VPN
-   ip address 10.1.255.4/32
-!
 interface Loopback1012
    description SVC_ETHERNET_LOOPBACK
    no shutdown
    vrf ATM
    ip address 10.2.255.4/32
-```
-
-### VLAN Interfaces
-
-#### VLAN Interfaces Summary
-
-| Interface | Description | VRF |  MTU | Shutdown |
-| --------- | ----------- | --- | ---- | -------- |
-| Vlan1114 | SVC01_C1_VLAN_SITE01_PE04 | ETHERNET_VPN | - | False |
-
-##### IPv4
-
-| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
-| --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1114 |  ETHERNET_VPN  |  -  |  10.1.4.1/24  |  -  |  -  |  -  |
-
-#### VLAN Interfaces Device Configuration
-
-```eos
-!
-interface Vlan1114
-   description SVC01_C1_VLAN_SITE01_PE04
-   no shutdown
-   vrf ETHERNET_VPN
-   ip address virtual 10.1.4.1/24
 ```
 
 ## Routing
@@ -542,7 +484,6 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 | --- | --------------- |
 | default | True |
 | ATM | True |
-| ETHERNET_VPN | True |
 | MGMT | False |
 
 #### IP Routing Device Configuration
@@ -551,7 +492,6 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
 ip routing vrf ATM
-ip routing vrf ETHERNET_VPN
 no ip routing vrf MGMT
 ```
 
@@ -563,7 +503,6 @@ no ip routing vrf MGMT
 | --- | --------------- |
 | default | False |
 | ATM | false |
-| ETHERNET_VPN | false |
 | MGMT | false |
 
 ### Static Routes
@@ -675,134 +614,6 @@ router isis CORE
       no shutdown
 ```
 
-### Router BGP
-
-ASN Notation: asdot
-
-#### Router BGP Summary
-
-| BGP AS | Router ID |
-| ------ | --------- |
-| 65000 | 10.255.1.4 |
-
-| BGP Tuning |
-| ---------- |
-| no bgp default ipv4-unicast |
-| maximum-paths 4 ecmp 4 |
-
-#### Router BGP Peer Groups
-
-##### ATM-BACKBONE
-
-| Settings | Value |
-| -------- | ----- |
-
-##### MPLS-OVERLAY-PEERS
-
-| Settings | Value |
-| -------- | ----- |
-| Address Family | mpls |
-| Remote AS | 65000 |
-| Source | Loopback0 |
-| BFD | True |
-| Send community | all |
-| Maximum routes | 0 (no limit) |
-
-#### BGP Neighbors
-
-| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
-| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
-| 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
-| 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
-| 10.2.0.3 | 65101 | ATM | - | - | - | - | - | - | - | - | - |
-
-#### Router BGP EVPN Address Family
-
-##### EVPN Peer Groups
-
-| Peer Group | Activate | Route-map In | Route-map Out | Encapsulation |
-| ---------- | -------- | ------------ | ------------- | ------------- |
-| MPLS-OVERLAY-PEERS | True |  - | - | default |
-
-##### EVPN Neighbor Default Encapsulation
-
-| Neighbor Default Encapsulation | Next-hop-self Source Interface |
-| ------------------------------ | ------------------------------ |
-| mpls | Loopback0 |
-
-#### Router BGP VLANs
-
-| VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
-| ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
-| 1114 | 10.255.1.4:11114 | 11114:11114 | - | - | learned |
-
-#### Router BGP VRFs
-
-| VRF | Route-Distinguisher | Redistribute |
-| --- | ------------------- | ------------ |
-| ATM | 10.255.1.4:12 | connected<br>ospf |
-| ETHERNET_VPN | 10.255.1.4:11 | connected |
-
-#### Router BGP Device Configuration
-
-```eos
-!
-router bgp 65000
-   bgp asn notation asdot
-   router-id 10.255.1.4
-   no bgp default ipv4-unicast
-   maximum-paths 4 ecmp 4
-   neighbor ATM-BACKBONE peer group
-   neighbor ATM-BACKBONE description ATM CONNECTITVITY
-   neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 65000
-   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
-   neighbor MPLS-OVERLAY-PEERS bfd
-   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
-   neighbor MPLS-OVERLAY-PEERS password 7 <removed>
-   neighbor MPLS-OVERLAY-PEERS send-community
-   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
-   neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
-   neighbor 10.255.0.1 description s1-p01_Loopback0
-   neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
-   neighbor 10.255.0.4 description s2-p02_Loopback0
-   !
-   vlan 1114
-      rd 10.255.1.4:11114
-      route-target both 11114:11114
-      redistribute learned
-   !
-   address-family evpn
-      bgp additional-paths receive
-      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
-      neighbor MPLS-OVERLAY-PEERS activate
-   !
-   address-family ipv4
-      neighbor ATM-BACKBONE activate
-      no neighbor MPLS-OVERLAY-PEERS activate
-   !
-   vrf ATM
-      rd 10.255.1.4:12
-      route-target import evpn 12:12
-      route-target export evpn 12:12
-      router-id 10.255.1.4
-      neighbor 10.2.0.3 peer group ATM-BACKBONE
-      neighbor 10.2.0.3 remote-as 65101
-      neighbor 10.2.0.3 description ATM CONNECTITVITY S1-CE04
-      redistribute connected
-      redistribute ospf
-      !
-      address-family ipv4
-         neighbor 10.2.0.3 activate
-   !
-   vrf ETHERNET_VPN
-      rd 10.255.1.4:11
-      route-target import evpn 11:11
-      route-target export evpn 11:11
-      router-id 10.255.1.4
-      redistribute connected
-```
-
 ## BFD
 
 ### Router BFD
@@ -909,7 +720,7 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 
 | Sequence | Type | Match | Set | Sub-Route-Map | Continue |
 | -------- | ---- | ----- | --- | ------------- | -------- |
-| 10 | permit | ip address prefix-list PL-ATM-FAKE-PREFIX | tag 1205 | - | - |
+| 10 | permit | ip address prefix-list PL-ATM-FAKE-PREFIX | ospf bit dn<br>tag 1205 | - | - |
 
 ##### RM-MANAGE-WITH-COMMUNITIES
 
@@ -917,6 +728,7 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 | -------- | ---- | ----- | --- | ------------- | -------- |
 | 10 | permit | community CL-INGRESS-ATM-LP-90 | local-preference 90 | - | - |
 | 20 | permit | community CL-INGRESS-ATM-LP-110 | local-preference 110 | - | - |
+| 90 | permit | - | - | - | - |
 
 #### Route-maps Device Configuration
 
@@ -925,6 +737,7 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 route-map RM-BGP-TO-OSPF permit 10
    description Redistribute BGP to OSPF
    match ip address prefix-list PL-ATM-FAKE-PREFIX
+   set ospf bit dn
    set tag 1205
 !
 route-map RM-MANAGE-WITH-COMMUNITIES permit 10
@@ -936,6 +749,9 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 20
    description Configure LP to 110 for ATM
    match community CL-INGRESS-ATM-LP-110
    set local-preference 110
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 90
+   description default-term-permit
 ```
 
 ## VRF Instances
@@ -945,7 +761,6 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 20
 | VRF Name | IP Routing |
 | -------- | ---------- |
 | ATM | enabled |
-| ETHERNET_VPN | enabled |
 | MGMT | disabled |
 
 ### VRF Instances Device Configuration
@@ -953,8 +768,6 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 20
 ```eos
 !
 vrf instance ATM
-!
-vrf instance ETHERNET_VPN
 !
 vrf instance MGMT
 ```
