--- a/config-builder/documentation/devices/s2-p02.md
+++ b/config-builder/documentation/devices/s2-p02.md
@@ -216,8 +216,6 @@ management api http-commands
 | ---- | --------- | ---- | -------- | ----- |
 | admin | 15 | network-admin | False | - |
 | ansible | 15 | network-admin | False | - |
-| arista | 15 | network-admin | False | - |
-| tom | 15 | network-admin | False | - |
 
 #### Local Users Device Configuration
 
@@ -225,8 +223,6 @@ management api http-commands
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 <removed>
-username arista privilege 15 role network-admin secret sha512 <removed>
-username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
 ### Enable Password
@@ -634,7 +630,7 @@ ASN Notation: asdot
 
 | Peer Group | Activate | Route-map In | Route-map Out | Encapsulation |
 | ---------- | -------- | ------------ | ------------- | ------------- |
-| MPLS-OVERLAY-PEERS | True |  - | - | default |
+| MPLS-OVERLAY-PEERS | True |  - | - | mpls |
 | RR-OVERLAY-PEERS | True |  - | - | default |
 
 ##### EVPN Neighbor Default Encapsulation
@@ -683,6 +679,7 @@ router bgp 65000
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
+      neighbor MPLS-OVERLAY-PEERS encapsulation mpls
       neighbor RR-OVERLAY-PEERS activate
    !
    address-family ipv4
