--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -13,8 +13,13 @@
   - [AAA Authentication](#aaa-authentication)
   - [AAA Authorization](#aaa-authorization)
 - [Aliases Device Configuration](#aliases-device-configuration)
+- [VLANs](#vlans)
+  - [VLANs Summary](#vlans-summary)
+  - [VLANs Device Configuration](#vlans-device-configuration)
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
+  - [Port-Channel Interfaces](#port-channel-interfaces)
+  - [VLAN Interfaces](#vlan-interfaces)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
@@ -170,8 +175,6 @@ management api http-commands
 | ---- | --------- | ---- | -------- | ----- |
 | admin | 15 | network-admin | False | - |
 | ansible | 15 | network-admin | False | - |
-| arista | 15 | network-admin | False | - |
-| tom | 15 | network-admin | False | - |
 
 #### Local Users Device Configuration
 
@@ -179,8 +182,6 @@ management api http-commands
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 <removed>
-username arista privilege 15 role network-admin secret sha512 <removed>
-username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
 ### AAA Authentication
@@ -240,6 +241,22 @@ alias summary6 show ipv6 bgp summary
 !
 ```
 
+## VLANs
+
+### VLANs Summary
+
+| VLAN ID | Name | Trunk Groups |
+| ------- | ---- | ------------ |
+| 1101 | ETHERNET-VPN-IRB-1101 | - |
+
+### VLANs Device Configuration
+
+```eos
+!
+vlan 1101
+   name ETHERNET-VPN-IRB-1101
+```
+
 ## Interfaces
 
 ### Ethernet Interfaces
@@ -250,6 +267,8 @@ alias summary6 show ipv6 bgp summary
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet1 | to s1-pe01 ethernet4 | *trunk | *1-4094 | *- | *- | 1 |
+| Ethernet2 | to s1-pe02 ethernet4 | *trunk | *1-4094 | *- | *- | 1 |
 
 *Inherited from Port-Channel Interface
 
@@ -259,8 +278,60 @@ alias summary6 show ipv6 bgp summary
 !
 interface Ethernet1
    description to s1-pe01 ethernet4
+   no shutdown
+   channel-group 1 mode active
+!
+interface Ethernet2
+   description to s1-pe02 ethernet4
+   no shutdown
+   channel-group 1 mode active
+```
+
+### Port-Channel Interfaces
+
+#### Port-Channel Interfaces Summary
+
+##### L2
+
+| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
+| --------- | ----------- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
+| Port-Channel1 | to s1-ce01-po1 | trunk | 1-4094 | - | - | - | - | - | - |
+
+#### Port-Channel Interfaces Device Configuration
+
+```eos
+!
+interface Port-Channel1
+   description to s1-ce01-po1
+   no shutdown
    switchport trunk allowed vlan 1-4094
    switchport mode trunk
+   switchport
+```
+
+### VLAN Interfaces
+
+#### VLAN Interfaces Summary
+
+| Interface | Description | VRF |  MTU | Shutdown |
+| --------- | ----------- | --- | ---- | -------- |
+| Vlan1101 | vrf-irb-vlan1101 | IRB | - | False |
+
+##### IPv4
+
+| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
+| --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
+| Vlan1101 |  IRB  |  10.1.1.11/24  |  -  |  -  |  -  |  -  |
+
+#### VLAN Interfaces Device Configuration
+
+```eos
+!
+interface Vlan1101
+   description vrf-irb-vlan1101
+   no shutdown
+   vrf IRB
+   ip address 10.1.1.11/24
 ```
 
 ## Routing
@@ -283,6 +354,7 @@ service routing protocols model multi-agent
 | default | True |
 | ATM | True |
 | ETHERNET_VPN | True |
+| IRB | True |
 | MGMT | True |
 
 #### IP Routing Device Configuration
@@ -292,6 +364,7 @@ service routing protocols model multi-agent
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf IRB
 ip routing vrf MGMT
 ```
 
@@ -305,6 +378,7 @@ ip routing vrf MGMT
 | ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
+| IRB | false |
 | MGMT | false |
 
 ### Static Routes
@@ -314,11 +388,13 @@ ip routing vrf MGMT
 | VRF | Destination Prefix | Next Hop IP | Exit interface | Administrative Distance | Tag | Route Name | Metric |
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | MGMT | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+| IRB | 10.1.0.0/16 | 10.1.1.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
+ip route vrf IRB 10.1.0.0/16 10.1.1.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 ```
 
@@ -330,6 +406,7 @@ ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 | -------- | ---------- |
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
+| IRB | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
@@ -339,6 +416,8 @@ ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance IRB
 !
 vrf instance MGMT
 ```
