--- a/config-builder/documentation/devices/s1-ce04.md
+++ b/config-builder/documentation/devices/s1-ce04.md
@@ -178,8 +178,6 @@ management api http-commands
 | ---- | --------- | ---- | -------- | ----- |
 | admin | 15 | network-admin | False | - |
 | ansible | 15 | network-admin | False | - |
-| arista | 15 | network-admin | False | - |
-| tom | 15 | network-admin | False | - |
 
 #### Local Users Device Configuration
 
@@ -187,8 +185,6 @@ management api http-commands
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 <removed>
-username arista privilege 15 role network-admin secret sha512 <removed>
-username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
 ### AAA Authentication
@@ -274,6 +270,7 @@ vlan 1114
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet1 | to s1-pe04 ethernet4 | trunk | 1-4094 | - | - | - |
 
 *Inherited from Port-Channel Interface
 
@@ -297,6 +294,7 @@ interface Ethernet1
    description to s1-pe04 ethernet4
    switchport trunk allowed vlan 1-4094
    switchport mode trunk
+   switchport
 !
 interface Ethernet2
    no shutdown
@@ -355,6 +353,7 @@ service routing protocols model multi-agent
 | default | True |
 | ATM | True |
 | ETHERNET_VPN | True |
+| IRB | True |
 | MGMT | True |
 
 #### IP Routing Device Configuration
@@ -364,6 +363,7 @@ service routing protocols model multi-agent
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf IRB
 ip routing vrf MGMT
 ```
 
@@ -377,6 +377,7 @@ ip routing vrf MGMT
 | ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
+| IRB | false |
 | MGMT | false |
 
 ### Static Routes
@@ -496,6 +497,7 @@ route-map RM-MARK-ATM-CE04 permit 10
 | -------- | ---------- |
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
+| IRB | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
@@ -505,6 +507,8 @@ route-map RM-MARK-ATM-CE04 permit 10
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance IRB
 !
 vrf instance MGMT
 ```
