--- a/config-builder/documentation/devices/s2-pe01.md
+++ b/config-builder/documentation/devices/s2-pe01.md
@@ -37,7 +37,6 @@
   - [Static Routes](#static-routes)
   - [Router OSPF](#router-ospf)
   - [Router ISIS](#router-isis)
-  - [Router BGP](#router-bgp)
 - [BFD](#bfd)
   - [Router BFD](#router-bfd)
 - [MPLS](#mpls)
@@ -228,8 +227,6 @@ management api http-commands
 | ---- | --------- | ---- | -------- | ----- |
 | admin | 15 | network-admin | False | - |
 | ansible | 15 | network-admin | False | - |
-| arista | 15 | network-admin | False | - |
-| tom | 15 | network-admin | False | - |
 
 #### Local Users Device Configuration
 
@@ -237,8 +234,6 @@ management api http-commands
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 <removed>
-username arista privilege 15 role network-admin secret sha512 <removed>
-username tom privilege 15 role network-admin secret sha512 <removed>
 ```
 
 ### Enable Password
@@ -336,15 +331,11 @@ vlan internal order ascending range 1006 1199
 
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
-| 1115 | SVC01_C1_VLAN_SITE02_PE01 | - |
 | 1205 | L3VPN-EXIT-POINT | - |
 
 ### VLANs Device Configuration
 
 ```eos
-!
-vlan 1115
-   name SVC01_C1_VLAN_SITE02_PE01
 !
 vlan 1205
    name L3VPN-EXIT-POINT
@@ -429,7 +420,6 @@ interface Ethernet3
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
 | Loopback0 | ROUTER_ID | default | 10.255.1.5/32 |
-| Loopback1011 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | 10.1.255.5/32 |
 | Loopback1012 | SVC_ETHERNET_LOOPBACK | ATM | 10.2.255.5/32 |
 
 ##### IPv6
@@ -437,7 +427,6 @@ interface Ethernet3
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
 | Loopback0 | ROUTER_ID | default | - |
-| Loopback1011 | SVC_ETHERNET_LOOPBACK | ETHERNET_VPN | - |
 | Loopback1012 | SVC_ETHERNET_LOOPBACK | ATM | - |
 
 ##### ISIS
@@ -458,12 +447,6 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1011
-   description SVC_ETHERNET_LOOPBACK
-   no shutdown
-   vrf ETHERNET_VPN
-   ip address 10.1.255.5/32
-!
 interface Loopback1012
    description SVC_ETHERNET_LOOPBACK
    no shutdown
@@ -477,25 +460,17 @@ interface Loopback1012
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1115 | SVC01_C1_VLAN_SITE02_PE01 | ETHERNET_VPN | - | False |
 | Vlan1205 | L3VPN-EXIT-POINT | ATM | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1115 |  ETHERNET_VPN  |  -  |  10.1.5.1/24  |  -  |  -  |  -  |
 | Vlan1205 |  ATM  |  10.2.1.1/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
-!
-interface Vlan1115
-   description SVC01_C1_VLAN_SITE02_PE01
-   no shutdown
-   vrf ETHERNET_VPN
-   ip address virtual 10.1.5.1/24
 !
 interface Vlan1205
    description L3VPN-EXIT-POINT
@@ -538,7 +513,6 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 | --- | --------------- |
 | default | True |
 | ATM | True |
-| ETHERNET_VPN | True |
 | MGMT | False |
 
 #### IP Routing Device Configuration
@@ -547,7 +521,6 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
 ip routing vrf ATM
-ip routing vrf ETHERNET_VPN
 no ip routing vrf MGMT
 ```
 
@@ -559,7 +532,6 @@ no ip routing vrf MGMT
 | --- | --------------- |
 | default | False |
 | ATM | false |
-| ETHERNET_VPN | false |
 | MGMT | false |
 
 ### Static Routes
@@ -678,125 +650,6 @@ router isis CORE
       no shutdown
 ```
 
-### Router BGP
-
-ASN Notation: asdot
-
-#### Router BGP Summary
-
-| BGP AS | Router ID |
-| ------ | --------- |
-| 65000 | 10.255.1.5 |
-
-| BGP Tuning |
-| ---------- |
-| no bgp default ipv4-unicast |
-| maximum-paths 4 ecmp 4 |
-
-#### Router BGP Peer Groups
-
-##### MPLS-OVERLAY-PEERS
-
-| Settings | Value |
-| -------- | ----- |
-| Address Family | mpls |
-| Remote AS | 65000 |
-| Source | Loopback0 |
-| BFD | True |
-| Send community | all |
-| Maximum routes | 0 (no limit) |
-
-#### BGP Neighbors
-
-| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
-| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
-| 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
-| 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
-
-#### Router BGP EVPN Address Family
-
-##### EVPN Peer Groups
-
-| Peer Group | Activate | Route-map In | Route-map Out | Encapsulation |
-| ---------- | -------- | ------------ | ------------- | ------------- |
-| MPLS-OVERLAY-PEERS | True |  - | - | default |
-
-##### EVPN Neighbor Default Encapsulation
-
-| Neighbor Default Encapsulation | Next-hop-self Source Interface |
-| ------------------------------ | ------------------------------ |
-| mpls | Loopback0 |
-
-#### Router BGP VLANs
-
-| VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
-| ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
-| 1115 | 10.255.1.5:11115 | 11115:11115 | - | - | learned |
-| 1205 | 10.255.1.5:13205 | 13205:13205 | - | - | learned |
-
-#### Router BGP VRFs
-
-| VRF | Route-Distinguisher | Redistribute |
-| --- | ------------------- | ------------ |
-| ATM | 10.255.1.5:12 | connected<br>ospf |
-| ETHERNET_VPN | 10.255.1.5:11 | connected |
-
-#### Router BGP Device Configuration
-
-```eos
-!
-router bgp 65000
-   bgp asn notation asdot
-   router-id 10.255.1.5
-   no bgp default ipv4-unicast
-   maximum-paths 4 ecmp 4
-   neighbor MPLS-OVERLAY-PEERS peer group
-   neighbor MPLS-OVERLAY-PEERS remote-as 65000
-   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
-   neighbor MPLS-OVERLAY-PEERS bfd
-   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
-   neighbor MPLS-OVERLAY-PEERS password 7 <removed>
-   neighbor MPLS-OVERLAY-PEERS send-community
-   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
-   neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
-   neighbor 10.255.0.1 description s1-p01_Loopback0
-   neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
-   neighbor 10.255.0.4 description s2-p02_Loopback0
-   !
-   vlan 1115
-      rd 10.255.1.5:11115
-      route-target both 11115:11115
-      redistribute learned
-   !
-   vlan 1205
-      rd 10.255.1.5:13205
-      route-target both 13205:13205
-      redistribute learned
-   !
-   address-family evpn
-      bgp additional-paths receive
-      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
-      neighbor MPLS-OVERLAY-PEERS activate
-   !
-   address-family ipv4
-      no neighbor MPLS-OVERLAY-PEERS activate
-   !
-   vrf ATM
-      rd 10.255.1.5:12
-      route-target import evpn 12:12
-      route-target export evpn 12:12
-      router-id 10.255.1.5
-      redistribute connected
-      redistribute ospf
-   !
-   vrf ETHERNET_VPN
-      rd 10.255.1.5:11
-      route-target import evpn 11:11
-      route-target export evpn 11:11
-      router-id 10.255.1.5
-      redistribute connected
-```
-
 ## BFD
 
 ### Router BFD
@@ -903,7 +756,7 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 
 | Sequence | Type | Match | Set | Sub-Route-Map | Continue |
 | -------- | ---- | ----- | --- | ------------- | -------- |
-| 10 | permit | ip address prefix-list PL-ATM-FAKE-PREFIX | tag 1205 | - | - |
+| 10 | permit | ip address prefix-list PL-ATM-FAKE-PREFIX | ospf bit dn<br>tag 1205 | - | - |
 
 ##### RM-MANAGE-WITH-COMMUNITIES
 
@@ -911,6 +764,7 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 | -------- | ---- | ----- | --- | ------------- | -------- |
 | 10 | permit | community CL-INGRESS-ATM-LP-90 | local-preference 90 | - | - |
 | 20 | permit | community CL-INGRESS-ATM-LP-110 | local-preference 110 | - | - |
+| 90 | permit | - | - | - | - |
 
 #### Route-maps Device Configuration
 
@@ -919,6 +773,7 @@ ip prefix-list PL-ATM-FAKE-PREFIX
 route-map RM-BGP-TO-OSPF permit 10
    description Redistribute BGP to OSPF
    match ip address prefix-list PL-ATM-FAKE-PREFIX
+   set ospf bit dn
    set tag 1205
 !
 route-map RM-MANAGE-WITH-COMMUNITIES permit 10
@@ -930,6 +785,9 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 20
    description Configure LP to 110 for ATM
    match community CL-INGRESS-ATM-LP-110
    set local-preference 110
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 90
+   description default-term-permit
 ```
 
 ## VRF Instances
@@ -939,7 +797,6 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 20
 | VRF Name | IP Routing |
 | -------- | ---------- |
 | ATM | enabled |
-| ETHERNET_VPN | enabled |
 | MGMT | disabled |
 
 ### VRF Instances Device Configuration
@@ -947,8 +804,6 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 20
 ```eos
 !
 vrf instance ATM
-!
-vrf instance ETHERNET_VPN
 !
 vrf instance MGMT
 ```
