feat(evpn,irb): Add L2VLAN in scenario

--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -248,6 +248,7 @@ alias summary6 show ipv6 bgp summary
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
 | 1101 | ETHERNET-VPN-IRB-1101 | - |
+| 1199 | ETHERNET-VPN-L2VLAN-1199 | - |
 
 ### VLANs Device Configuration
 
@@ -255,6 +256,9 @@ alias summary6 show ipv6 bgp summary
 !
 vlan 1101
    name ETHERNET-VPN-IRB-1101
+!
+vlan 1199
+   name ETHERNET-VPN-L2VLAN-1199
 ```
 
 ## Interfaces
@@ -316,12 +320,14 @@ interface Port-Channel1
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
 | Vlan1101 | vrf-irb-vlan1101 | IRB | - | False |
+| Vlan1199 | vrf-irb-vlan1199 | L2VLAN | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
 | Vlan1101 |  IRB  |  10.1.1.11/24  |  -  |  -  |  -  |  -  |
+| Vlan1199 |  L2VLAN  |  10.1.99.11/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
@@ -332,6 +338,12 @@ interface Vlan1101
    no shutdown
    vrf IRB
    ip address 10.1.1.11/24
+!
+interface Vlan1199
+   description vrf-irb-vlan1199
+   no shutdown
+   vrf L2VLAN
+   ip address 10.1.99.11/24
 ```
 
 ## Routing
@@ -355,6 +367,7 @@ service routing protocols model multi-agent
 | ATM | True |
 | ETHERNET_VPN | True |
 | IRB | True |
+| L2VLAN | True |
 | MGMT | True |
 
 #### IP Routing Device Configuration
@@ -365,6 +378,7 @@ ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 ```
 
@@ -379,6 +393,7 @@ ip routing vrf MGMT
 | default | false |
 | ETHERNET_VPN | false |
 | IRB | false |
+| L2VLAN | false |
 | MGMT | false |
 
 ### Static Routes
@@ -407,6 +422,7 @@ ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
 | IRB | enabled |
+| L2VLAN | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
@@ -418,6 +434,8 @@ vrf instance ATM
 vrf instance ETHERNET_VPN
 !
 vrf instance IRB
+!
+vrf instance L2VLAN
 !
 vrf instance MGMT
 ```
