--- a/config-builder/documentation/devices/s1-ce03.md
+++ b/config-builder/documentation/devices/s1-ce03.md
@@ -251,6 +251,7 @@ alias summary6 show ipv6 bgp summary
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
 | 1103 | ETHERNET-VPN-IRB-1103 | - |
+| 1199 | ETHERNET-VPN-L2VLAN-1199 | - |
 
 ### VLANs Device Configuration
 
@@ -258,6 +259,9 @@ alias summary6 show ipv6 bgp summary
 !
 vlan 1103
    name ETHERNET-VPN-IRB-1103
+!
+vlan 1199
+   name ETHERNET-VPN-L2VLAN-1199
 ```
 
 ## Interfaces
@@ -315,12 +319,14 @@ interface Ethernet2.101
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
 | Vlan1103 | vrf-irb-vlan1101 | IRB | - | False |
+| Vlan1199 | vrf-irb-vlan1199 | L2VLAN | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1103 |  IRB  |  10.1.3.12/24  |  -  |  -  |  -  |  -  |
+| Vlan1103 |  IRB  |  10.1.3.13/24  |  -  |  -  |  -  |  -  |
+| Vlan1199 |  L2VLAN  |  10.1.99.13/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
@@ -330,7 +336,13 @@ interface Vlan1103
    description vrf-irb-vlan1101
    no shutdown
    vrf IRB
-   ip address 10.1.3.12/24
+   ip address 10.1.3.13/24
+!
+interface Vlan1199
+   description vrf-irb-vlan1199
+   no shutdown
+   vrf L2VLAN
+   ip address 10.1.99.13/24
 ```
 
 ## Routing
@@ -354,6 +366,7 @@ service routing protocols model multi-agent
 | ATM | True |
 | ETHERNET_VPN | True |
 | IRB | True |
+| L2VLAN | True |
 | MGMT | True |
 
 #### IP Routing Device Configuration
@@ -364,6 +377,7 @@ ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 ```
 
@@ -378,6 +392,7 @@ ip routing vrf MGMT
 | default | false |
 | ETHERNET_VPN | false |
 | IRB | false |
+| L2VLAN | false |
 | MGMT | false |
 
 ### Static Routes
@@ -499,6 +514,7 @@ route-map RM-MARK-ATM-CE03 permit 10
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
 | IRB | enabled |
+| L2VLAN | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
@@ -510,6 +526,8 @@ vrf instance ATM
 vrf instance ETHERNET_VPN
 !
 vrf instance IRB
+!
+vrf instance L2VLAN
 !
 vrf instance MGMT
 ```
