--- a/config-builder/documentation/devices/s1-ce04.md
+++ b/config-builder/documentation/devices/s1-ce04.md
@@ -320,7 +320,7 @@ interface Ethernet2.101
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
-| Vlan1114 |  ETHERNET_VPN  |  10.1.4.13/24  |  -  |  -  |  -  |  -  |
+| Vlan1114 |  ETHERNET_VPN  |  10.1.4.14/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
@@ -330,7 +330,7 @@ interface Vlan1114
    description SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN
    no shutdown
    vrf ETHERNET_VPN
-   ip address 10.1.4.13/24
+   ip address 10.1.4.14/24
 ```
 
 ## Routing
@@ -354,6 +354,7 @@ service routing protocols model multi-agent
 | ATM | True |
 | ETHERNET_VPN | True |
 | IRB | True |
+| L2VLAN | True |
 | MGMT | True |
 
 #### IP Routing Device Configuration
@@ -364,6 +365,7 @@ ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 ```
 
@@ -378,6 +380,7 @@ ip routing vrf MGMT
 | default | false |
 | ETHERNET_VPN | false |
 | IRB | false |
+| L2VLAN | false |
 | MGMT | false |
 
 ### Static Routes
@@ -498,6 +501,7 @@ route-map RM-MARK-ATM-CE04 permit 10
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
 | IRB | enabled |
+| L2VLAN | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
@@ -509,6 +513,8 @@ vrf instance ATM
 vrf instance ETHERNET_VPN
 !
 vrf instance IRB
+!
+vrf instance L2VLAN
 !
 vrf instance MGMT
 ```
