--- a/config-builder/documentation/devices/s1-pe01.md
+++ b/config-builder/documentation/devices/s1-pe01.md
@@ -333,6 +333,7 @@ vlan internal order ascending range 1006 1199
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
 | 1101 | ETHERNET_VPN_IRB_S1_CE01-02 | - |
+| 1199 | ETHERNET_VPN_L2VLAN | - |
 
 ### VLANs Device Configuration
 
@@ -340,6 +341,9 @@ vlan internal order ascending range 1006 1199
 !
 vlan 1101
    name ETHERNET_VPN_IRB_S1_CE01-02
+!
+vlan 1199
+   name ETHERNET_VPN_L2VLAN
 ```
 
 ## Interfaces
@@ -720,6 +724,7 @@ ASN Notation: asdot
 | VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
 | ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
 | 1101 | 10.255.1.1:11101 | 11101:11101 | - | - | learned |
+| 1199 | 10.255.1.1:11199 | 11199:11199 | - | - | learned |
 
 #### Router BGP VRFs
 
@@ -755,6 +760,11 @@ router bgp 65000
       redistribute learned
       !
       redistribute router-mac system default-gateway
+   !
+   vlan 1199
+      rd 10.255.1.1:11199
+      route-target both 11199:11199
+      redistribute learned
    !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
