--- a/config-builder/documentation/devices/s2-ce01.md
+++ b/config-builder/documentation/devices/s2-ce01.md
@@ -342,6 +342,7 @@ service routing protocols model multi-agent
 | ATM | True |
 | ETHERNET_VPN | True |
 | IRB | True |
+| L2VLAN | True |
 | MGMT | True |
 
 #### IP Routing Device Configuration
@@ -352,6 +353,7 @@ ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 ```
 
@@ -366,6 +368,7 @@ ip routing vrf MGMT
 | default | false |
 | ETHERNET_VPN | false |
 | IRB | false |
+| L2VLAN | false |
 | MGMT | false |
 
 ### Static Routes
@@ -417,6 +420,7 @@ router ospf 1205 vrf ATM
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
 | IRB | enabled |
+| L2VLAN | enabled |
 | MGMT | enabled |
 
 ### VRF Instances Device Configuration
@@ -428,6 +432,8 @@ vrf instance ATM
 vrf instance ETHERNET_VPN
 !
 vrf instance IRB
+!
+vrf instance L2VLAN
 !
 vrf instance MGMT
 ```
