--- a/config-builder/documentation/devices/s1-pe03.md
+++ b/config-builder/documentation/devices/s1-pe03.md
@@ -333,6 +333,7 @@ vlan internal order ascending range 1006 1199
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
 | 1103 | ETHERNET_VPN_IRB_S1_CE03 | - |
+| 1199 | ETHERNET_VPN_L2VLAN | - |
 
 ### VLANs Device Configuration
 
@@ -340,6 +341,9 @@ vlan internal order ascending range 1006 1199
 !
 vlan 1103
    name ETHERNET_VPN_IRB_S1_CE03
+!
+vlan 1199
+   name ETHERNET_VPN_L2VLAN
 ```
 
 ## Interfaces
@@ -731,6 +735,7 @@ ASN Notation: asdot
 | VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
 | ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
 | 1103 | 10.255.1.3:11103 | 11103:11103 | - | - | learned |
+| 1199 | 10.255.1.3:11199 | 11199:11199 | - | - | learned |
 
 #### Router BGP VRFs
 
@@ -769,6 +774,11 @@ router bgp 65000
       redistribute learned
       !
       redistribute router-mac system default-gateway
+   !
+   vlan 1199
+      rd 10.255.1.3:11199
+      route-target both 11199:11199
+      redistribute learned
    !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
